fix(list-counter-style): improve alignment and appearance of list item labels
- Adjust line-height to 1 for better vertical alignment
- Unset left and top properties to remove unnecessary positioning
- Add margin: 0 to ensure consistent spacing

--- a/styles/features/list-counter-style.scss
+++ b/styles/features/list-counter-style.scss
@@ -117,7 +117,11 @@ $li-types: ".li[data-subtype=o]", ".li[data-subtype=u]";
             font-size: 1.5em;
             text-align: center;
             // color: var(--b3-theme-on-background);
+            line-height: 1;
             color: inherit;
+            left: unset;
+            top: unset;
+            margin: 0;
         }
     }
 
